syntax = "proto3";

package task.v1;

option go_package = "github.com/a-s/connect-task-manage/gen/api/task/v1;taskv1";

import "google/protobuf/timestamp.proto";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  bool is_completed = 4;
  string user_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  bool is_completed = 4;
}

message UpdateTaskResponse {
  Task task = 1;
}
message ListTasksRequest {}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {}