syntax = "proto3";

package user.v1;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc GetMe (GetMeRequest) returns (GetMeResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  optional User user = 1; //optionalにする
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message UpdateUserResponse {
    User user = 1;
}

message LogoutRequest {}

message LogoutResponse {}

message GetMeRequest{}

message GetMeResponse{
    User user = 1;
}
